Implemented function that reads the xml, and randomizes the questions

--- a/top.html
+++ b/top.html
@@ -24,19 +24,24 @@
 
     <!-- Navigation -->
     <header>
-		<nav>
-			<div class="nav-wrapper">
-			<a class="brand-logo center"><i class="fas fa-gamepad"></i></a>
-			<ul class="left hide-on-med-and-down">
-				<li><a href="help.php">Help</a></li>	
-				<li><a href="score.php">Score</a></li>
-				<li class="active"><a href="help.php">Home</a></li>
-			</ul>
-           </div>
+        <nav>
+            <div class="nav-wrapper">
+                <a class="brand-logo center"><i class="fas fa-gamepad"></i></a>
+                <ul class="left hide-on-med-and-down">
+                    <li id="help_page" class=""><a href="help.php">Help</a></li>
+                    <li id="scores_page" class=""><a href="score.php">Score</a></li>
+                    <li id="home_page" class=""><a href="home.php">Home</a></li>
+                </ul>
+            </div>
         </nav>
-        
+
     </header>
     <!-- Navigation -->
-	
-	<button id="start_g">Start Game</button>
 
+    <div class="container padding-top-bottom">
+        <h1 class="text-center">
+            WELCOME
+        </h1>
+
+        <button id="start_g">Start Game</button>
+    </div>
