Questions are showing into the homepage

--- a/top.html
+++ b/top.html
@@ -9,39 +9,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Homepage</title>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css" integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
-        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
+          integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
+          crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
-    <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 
-    <!-- Compiled and minified JavaScript -->
+    <!-- Google Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Materialize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </head>
 
 <body>
 
-    <!-- Navigation -->
-    <header>
-        <nav>
-            <div class="nav-wrapper">
-                <a class="brand-logo center"><i class="fas fa-gamepad"></i></a>
-                <ul class="left hide-on-med-and-down">
-                    <li id="help_page" class=""><a href="help.php">Help</a></li>
-                    <li id="scores_page" class=""><a href="score.php">Score</a></li>
-                    <li id="home_page" class=""><a href="home.php">Home</a></li>
-                </ul>
-            </div>
-        </nav>
+<!-- Navigation -->
+<header>
+    <nav>
+        <div class="nav-wrapper">
+            <a class="brand-logo center"><i class="fas fa-gamepad"></i></a>
+            <ul class="left hide-on-med-and-down">
+                <li id="help_page" class=""><a href="help.php">Help</a></li>
+                <li id="scores_page" class=""><a href="scores.php">Score</a></li>
+                <li id="home_page" class=""><a href="index.php">Home</a></li>
+            </ul>
+        </div>
+    </nav>
 
-    </header>
-    <!-- Navigation -->
-
-    <div class="container padding-top-bottom">
-        <h1 class="text-center">
-            WELCOME
-        </h1>
-
-        <button id="start_g">Start Game</button>
-    </div>
+</header>
+<!-- Navigation -->
