Finished implementation of all the pages

--- a/bottom.html
+++ b/bottom.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-   <footer class="page-footer">
+   <footer  class="deep-purple page-footer">
           <div class="container">
             <div class="row">
               <div class="col l6 s12">
