--- a/top.html
+++ b/top.html
@@ -5,18 +5,22 @@
     <meta charset="UTF-8">
     <meta name="author" content="Joanna Georgiou">
     <meta name="description" content="Assignment 3 for CS425 Fall2018">
-    <meta name="keywords" content="Assignment 2, CS425, Fall2018, HTML, Photographer, John Doe">
+    <meta name="keywords"
+          content="Assignment 3, CS425, Fall2018, HTML, PHP, CSS, Materialize CSS, Google Icons, Question Game">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Homepage</title>
+    <title>Question Game</title>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.2/css/all.css"
           integrity="sha384-/rXc/GQVaYpyDdyxK+ecHPVYJSN9bmVFBvjA/9eOB+pb3F2w2N6fc5qB9Ew5yIns"
           crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
+    <link rel="icon" type="image/png" href="img/favicon.png"/>
 
     <!-- Google Icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <script src="https://code.jquery.com/jquery-3.3.1.js"
+            integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
 
     <!-- Materialize CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
@@ -27,16 +31,31 @@
 
 <!-- Navigation -->
 <header>
-    <nav>
+    <nav class="deep-purple">
         <div class="nav-wrapper">
             <a class="brand-logo center"><i class="fas fa-gamepad"></i></a>
+            <a href="#" class="sidenav-trigger" data-target="mobile-nav">
+                <i class="material-icons">menu</i>
+            </a>
             <ul class="left hide-on-med-and-down">
                 <li id="help_page" class=""><a href="help.php">Help</a></li>
-                <li id="scores_page" class=""><a href="scores.php">Score</a></li>
+                <li id="scores_page" class=""><a href="scores.php">Scores</a></li>
                 <li id="home_page" class=""><a href="index.php">Home</a></li>
             </ul>
         </div>
     </nav>
 
+    <ul class="sidenav" id="mobile-nav">
+        <li id="home_page_mob" class=""><a href="index.php">Home</a></li>
+        <li id="scores_page_mob" class=""><a href="scores.php">Scores</a></li>
+        <li id="help_page_mob" class=""><a href="help.php">Help</a></li>
+    </ul>
+
 </header>
 <!-- Navigation -->
+
+<script>
+    $(document).ready(function () {
+        $('.sidenav').sidenav();
+    });
+</script>
